--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "django-browser-reload (>=1.18.0,<2.0.0)",
     "django-tailwind (>=4.2.0,<5.0.0)",
     "django-compressor (>=4.5.1,<5.0.0)",
-    "django-appconf (>=1.1.0,<2.0.0)"
+    "django-appconf (>=1.1.0,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "dj-database-url (>=3.0.1,<4.0.0)"
 ]
 
 
