--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
+      "src": "/staticfiles/(.*)",
       "dest": "/static/$1"
     },
     {
