--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   ],
   "routes": [
     {
-      "src": "/staticfiles/(.*)",
+      "src": "/static/(.*)",
       "dest": "/static/$1"
     },
     {
@@ -25,5 +25,6 @@
   ],
   "env": {
     "DJANGO_SETTINGS_MODULE": "config.settings"
-  }
+  },
+  "buildCommand": "chmod +x build.sh && ./build.sh"
 }
