Refactor Vercel configuration: add Python runtime settings, adjust static file handling, and streamline routing paths.

--- a/vercel.json
+++ b/vercel.json
@@ -4,27 +4,24 @@
     {
       "src": "config/wsgi.py",
       "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
       "config": {
-        "maxLambdaSize": "50mb"
+        "distDir": "staticfiles"
       }
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "/staticfiles/$1"
-    },
-    {
-      "src": "/media/(.*)",
-      "dest": "/media/$1"
+      "dest": "/static/$1"
     },
     {
       "src": "/(.*)",
       "dest": "config/wsgi.py"
     }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "config.settings"
-  },
-  "buildCommand": "chmod +x build.sh && ./build.sh"
+  ]
 }
