Enhance build process: add dependency installation step in build.sh and update Vercel configuration to include environment variables and a new build command.

--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,9 @@
     {
       "src": "config/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
-    {
-      "src": "build.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticfiles"
+      "config": { 
+        "maxLambdaSize": "50mb", 
+        "runtime": "python3.9"
       }
     }
   ],
@@ -20,8 +16,16 @@
       "dest": "/static/$1"
     },
     {
+      "src": "/media/(.*)",
+      "dest": "/media/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "config/wsgi.py"
     }
-  ]
+  ],
+  "env": {
+    "DJANGO_SETTINGS_MODULE": "config.settings"
+  },
+  "buildCommand": "pip install -r requirements.txt && python3 manage.py collectstatic --noinput"
 }
