--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,16 @@
     {
       "src": "config/wsgi.py",
       "use": "@vercel/python",
-      "config": { 
-        "maxLambdaSize": "50mb", 
-        "runtime": "python3.9"
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.11.5"
+      }
+    },
+    {
+      "src": "build.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
       }
     }
   ],
@@ -16,16 +23,8 @@
       "dest": "/static/$1"
     },
     {
-      "src": "/media/(.*)",
-      "dest": "/media/$1"
-    },
-    {
       "src": "/(.*)",
       "dest": "config/wsgi.py"
     }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "config.settings"
-  },
-  "buildCommand": "pip install -r requirements.txt && python3 manage.py collectstatic --noinput"
+  ]
 }
