--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "django-compressor (>=4.5.1,<5.0.0)",
     "django-appconf (>=1.1.0,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "dj-database-url (>=3.0.1,<4.0.0)"
+    "dj-database-url (>=3.0.1,<4.0.0)",
+    "cloudinary (>=1.44.1,<2.0.0)",
+    "django-cloudinary-storage (>=0.3.0,<0.4.0)"
 ]
 
 
